2002-07-09  David Philippi  <lists@torangan.de>

	* hyper/c_high.l: Added all missing keywords
	from ISO C++ (according to a list from
	"The Complete Reference C++" by Herbert Schildt).
	Removed the obsolete keyword "overload" and
	the non-existing keyword "interface".

2002-07-02  Mo DeJong  <supermo@bayarea.net>

	Added SN-510-2002-07-02 and SN-51-branch tags.

2002-06-25  Mo DeJong  <supermo@bayarea.net>

	* mkdist.sh: Update version to 5.1.0.

2002-06-25  Mo DeJong  <supermo@bayarea.net>

	* hyper/highlight.c (tk_text_buffer): Update hack used
	to extract text from a Tk text widget before passing
	it to the lexer. This function has the name of the
	tk dll hard coded inside it, and it needed to be
	updated. The method also lacked error checking for
	the case where the dll could not be found.

2002-06-24  Mo DeJong  <supermo@bayarea.net>

	* patches/tk_wmwithdraw.patch: Add patch that fixes
	win32 initial mapping problems. This fixes the forward
	button in the tools window, it was not painting when
	the window was first mapped. This also fixes problems
	with dialogs that get mapped at one size but then
	get moved or resized at idle time.

2002-06-24  Mo DeJong  <supermo@bayarea.net>

	* gui/multiview.tcl (search_grep): Invoke StartGrep not
	ExecGrep on the grep widget.

2002-06-24  Mo DeJong  <supermo@bayarea.net>

	* gui/multiview.tcl (constructor): Base the initial size
	of the tools window on the user pref percent.
	* gui/symbolbrowser.tcl (constructor): Cleanup height
	calculation so that it uses floating point arithmetic.

2002-06-21  Mo DeJong  <supermo@bayarea.net>

	* gui/execgrepdriver.tcl (start, finish, grepReadableEvent):
	Assert that the text widget is empty before starting.
	Toggle the -state of the text widget before/after
	the processing in the finish method.
	Add a newline after the truncated or canceled message
	so the test cases get a uniform output. If the search
	has been canceled, look back at the last line to see